1999-12-28  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-edit.el (mime-edit-user-agent-value): Use `error' instead of
	`file-error' for the handler of `condition-case' because XEmacs
	does not signal an error named `file-error' if the required feature
	is not provided.

1999-12-16  MORIOKA Tomohiko  <tomo@m17n.org>

	* semi-setup.el (mime-setup-decode-message-header): Comment out.
	(mime-edit-mode-hook): Don't use
	`mime-setup-decode-message-header'.
	(mu-cite/pre-cite-hook): Don't use `eword-decode-header'.

1999-12-14  Akihiro Arisawa   <ari@atesoft.advantest.co.jp>

	* mime-view.el (mime-preview-follow-current-entity): Fetch field of
	`mime-view-following-required-fields-list' from parent entity if it
	is not exist in current entity.

1999-12-13  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README.en: Update for the recent ML address and ftp site.

1999-12-11  Daiki Ueno        <ueno@ueda.info.waseda.ac.jp>

	* smime.el (smime-encrypt-region): Delete entity header.
	(smime-sign-region): Ditto.

	* mime-edit.el: Fix autoload settings for `smime-sign-region' and
	`smime-encrypt-region.
	(mime-edit-sign-smime): Set Content-Type
	`application/pkcs7-signature' instead of
	`application/x-pkcs7-signature'; add Content-Description.
	(mime-edit-encrypt-smime): Set content-type
	`application/pkcs7-mime' instead of `x-application/pkcs7-mime'.

	* mime-pgp.el: Fix autoload settings for `smime-verify-region' and
	`smime-decrypt-region.
	(mime-decrypt-application/pkcs7-mime):
	Bind `inhibit-read-only' to t.

1999-12-09  Daiki Ueno        <ueno@ueda.info.waseda.ac.jp>

	* semi-def.el (mime-user-interface-product): Bump up to
	EMIKO 1.13.9.

	* smime.el: Require `static' when compiling.
	(smime-directory-files): New macro.
	(smime-find-certificate): Use it.

1999-12-08  Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* smime.el (smime-verify-region): Abolish local variable `cert-file'.
	(smime-find-certificate): Rename from `smime-search-certificate'.
