@@ -1,3 +1,8 @@
+1999-12-28   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>
+
+	* mime-edit.el (mime-edit-user-agent-value): Don't require
+	`apel-ver' directly.
+
 1999-12-28  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* mime-edit.el (mime-edit-user-agent-value): Use `error' instead of
